# mastodont-c

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  mastodont-cxx.pc  mastodont.pc  premake4.lua  premake5.lua
.fossil-settings/: ignore-glob
bindings/: CMakeLists.txt
bindings/cxx/: CMakeLists.txt  mastodont.cpp
bindings/cxx/include/: mastodont.hpp
cmake/: FindMastodont.cmake  MastodontConfig.cmake.in  mastodont-config.cmake
include/: .#mastodont_status.h  mastodont.h  mastodont_account.h  mastodont_announcement.h  mastodont_application.h  mastodont_args.h  mastodont_attachment.h  mastodont_chats.h  mastodont_codes.h  mastodont_emoji.h  mastodont_emojis.h  mastodont_error.h  mastodont_fetch.h  mastodont_generate.h  mastodont_history.h  mastodont_hooks.h  mastodont_instance.h  mastodont_json_helper.h  mastodont_list.h  mastodont_mention.h  mastodont_nodeinfo.h  mastodont_notif_types.h  mastodont_notification.h  mastodont_pleroma.h  mastodont_query.h  mastodont_relationship.h  mastodont_request.h  mastodont_scrobbles.h  mastodont_search.h  mastodont_static.h  mastodont_status.h  mastodont_tag.h  mastodont_tags.h  mastodont_timeline.h  mastodont_types.h  mastodont_uri.h  mastodont_visibility_types.h
src/: .#request.c  .#search.c  .#timeline.c  account.c  application.c  attachment.c  chats.c  emoji.c  error.c  fetch.c  history.c  hooks.c  instance.c  json_helper.c  list.c  mastodont.c  navigation.c  navigation.h  nodeinfo.c  notification.c  pleroma.c  query.c  relationship.c  request.c  scrobbles.c  search.c  static.c  status.c  tag.c  timeline.c  uri.c
tests/: CMakeLists.txt  get_feed.c  get_feed_efl.c  get_nodeinfo.c  mastodont-cxx-test.cpp
